Fix spacing of output elements

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    outline: 1px solid red;
+    /* outline: 1px solid red; */
 }
 
 body {
@@ -38,7 +38,7 @@ body {
     cursor: pointer;
 }
 
-h1, h2, .scores, .buttons, .winner {
+h1, h2, .scores, .buttons, .winner, .playAgain {
     text-align: center;
     margin-bottom: 1rem;
 }
@@ -72,4 +72,5 @@ h1, h2, .scores, .buttons, .winner {
 
 .playAgain {
     padding: 0.5rem 1rem;
+    border-radius: 0.5rem;
 }
